# picolo

./: .gitignore  CMakeLists.txt  README.md  besciifont.h  conio.c  conio.h  cstream.c  cstream.h  display.c  display.h  ed.c  ed.h  ed_buffer.c  ed_copypaste.c  ed_cursor.c  ed_edit.c  ed_status.c  hid_app.c  hw_config.c  main.c  notes.txt  platform.c  platform.h  scribble.txt  sdcard.c  sdcard.h  shell.c  shell.h  z80_memory.c  z80_memory.h  z80_ram.pio  zproc.pio  zproc_read.pio  zproc_write.pio  ztick.pio  zxe.pio  zxe_driver.c  zxe_driver.h
liblua/: CMakeLists.txt
logfiles/: COM6_2025_05_25.18.33.05.818.txt  COM6_2025_05_26.12.37.31.151.txt  COM6_2025_05_26.14.03.19.598.txt  COM6_2025_05_26.14.59.01.169.txt  COM6_2025_05_26.15.17.43.581.txt  COM6_2025_05_26.15.27.03.584.txt  COM6_2025_05_26.15.30.28.483.txt  COM6_2025_05_26.15.43.00.962.txt  COM6_2025_05_26.15.48.21.855.txt  COM6_2025_05_26.16.46.53.800.txt  COM6_2025_06_01.10.39.09.560.txt  COM6_2025_06_01.10.41.08.470.txt  COM6_2025_06_01.10.58.11.763.txt  COM6_2025_06_01.11.38.13.673.txt  COM6_2025_06_01.12.31.01.767.txt  COM6_2025_06_01.13.35.49.844.txt  COM6_2025_06_01.13.52.46.177.txt  COM6_2025_06_01.14.00.20.100.txt  COM6_2025_06_01.14.03.08.600.txt  COM6_2025_06_01.14.06.37.500.txt  COM6_2025_06_01.14.33.02.960.txt  COM6_2025_06_01.14.38.21.528.txt  COM6_2025_06_01.15.10.38.445.txt  COM6_2025_06_01.15.30.52.094.txt  COM6_2025_06_01.15.49.49.436.txt  COM6_2025_06_01.15.54.11.057.txt  COM6_2025_06_01.16.35.14.756.txt  COM6_2025_06_01.16.56.34.532.txt  COM6_2025_06_01.17.29.00.595.txt  COM6_2025_06_01.17.34.58.572.txt  COM6_2025_06_01.17.41.54.266.txt  COM6_2025_06_01.17.43.13.066.txt  COM6_2025_06_01.18.25.06.654.txt  COM6_2025_06_01.18.30.56.246.txt  COM6_2025_06_01.18.35.47.037.txt  COM6_2025_06_01.18.42.17.334.txt  COM6_2025_06_01.18.43.09.807.txt  COM6_2025_06_01.18.43.29.070.txt  COM6_2025_06_01.18.46.14.899.txt  COM6_2025_06_01.18.55.36.071.txt  (+74 more)
